--- a/examples/feed.html
+++ b/examples/feed.html
@@ -170,8 +170,7 @@
             <!-- Card with headings -->
             <div class="card">
               <div class="card-header">
-                <h5 class="title">Lost Item</h5>
-                <h5 class="title">Found Item</h5>
+                <h5 class="title">Feed</h5>
               </div>
               <div class="card-body">
 
