--- a/examples/responses.html
+++ b/examples/responses.html
@@ -170,8 +170,7 @@
             <!-- Card with headings -->
             <div class="card">
               <div class="card-header">
-                <h5 class="title">Lost Item</h5>
-                <h5 class="title">Found Item</h5>
+                <h5 class="title">My Responses</h5>
               </div>
               <div class="card-body">
 
