--- a/examples/lostandfound.html
+++ b/examples/lostandfound.html
@@ -247,7 +247,7 @@
           <ul class="nav">
             <li class="nav-item">
               <a href="javascript:void(0)" class="nav-link">
-                Creative Tim
+                UNION
               </a>
             </li>
             <li class="nav-item">
@@ -265,7 +265,7 @@
             ©
             <script>
               document.write(new Date().getFullYear())
-            </script>2018 made with <i class="tim-icons icon-heart-2"></i> by
+            </script>made with <i class="tim-icons icon-heart-2"></i> by
             <a href="javascript:void(0)" target="_blank">Team Avenir</a> for College Union LBSITW.
           </div>
         </div>
