--- a/examples/notifications.html
+++ b/examples/notifications.html
@@ -157,26 +157,26 @@
           <div class="col-md-6">
             <div class="card">
               <div class="card-header">
-                <h4 class="card-title">Notification states</h4>
+                <h4 class="card-title">Notification</h4>
               </div>
               <div class="card-body">
                 <div class="alert alert-primary">
                   <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
                     <i class="tim-icons icon-simple-remove"></i>
                   </button>
-                  <span><b> Primary - </b> This is a regular notification made with ".alert-primary"</span>
+                  <span><b> Holiday on 26th May</b> </span>
                 </div>
                 <div class="alert alert-info">
                   <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
                     <i class="tim-icons icon-simple-remove"></i>
                   </button>
-                  <span><b> Info - </b> This is a regular notification made with ".alert-info"</span>
+                  <span><b>Series Examination commence on April 19th</b></span>
                 </div>
                 <div class="alert alert-success">
                   <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
                     <i class="tim-icons icon-simple-remove"></i>
                   </button>
-                  <span><b> Success - </b> This is a regular notification made with ".alert-success"</span>
+                  <span><b> Yagna Dhruva'24 on April 5,6,7</b></span>
                 </div>
                 <div class="alert alert-warning">
                   <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
@@ -198,7 +198,7 @@
           <ul class="nav">
             <li class="nav-item">
               <a href="javascript:void(0)" class="nav-link">
-                Creative Tim
+                UNION
               </a>
             </li>
             <li class="nav-item">
@@ -216,7 +216,7 @@
             ©
             <script>
               document.write(new Date().getFullYear())
-            </script>2018 made with <i class="tim-icons icon-heart-2"></i> by
+            </script>made with <i class="tim-icons icon-heart-2"></i> by
             <a href="javascript:void(0)" target="_blank">Creative Tim</a> for a better web.
           </div>
         </div>
